--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	    <!-- ojdbc6.jar 라이브러리 추가 태그부분 -->
 		<dependency>
 			<groupId>com.oracle</groupId>
